# clison

./: LICENSE  README.md  example.json  pyproject.toml  requirements.txt
clison/: cli.py  utils.py
clison/commands/: print_json.py
